--- a/home/home.css
+++ b/home/home.css
@@ -1,30 +1,42 @@
+
+*{
+    padding: 0;
+    margin: 0;
+}
+
 body{
-    background-color: hsl(1, 42%, 75%);
+    background-color: hsla(1, 42%, 75%, 0.242);
 }
-
-@font-face {
-    font-family: ;
-    src: url(/);
-}
-
 
 /* HEADER */
-header img {
+
+.logo {
     display: block;
     border-radius: 50%;
     width: 120px;
     cursor: pointer;
 }
-#logo-home{
-   display: flex;
-   justify-content: center;
-   padding-bottom: 2rem;
+#logo-home {
+    display: flex;
+    justify-content: space-around;
+    padding: 2rem 0;
+    align-items: center;
 }
-#line-header{
+#logo-home nav a{
+    color:hsla(356, 29%, 20%, 0.783);
+    font-size: 1.5rem;
+    text-decoration: none;
+}
+#line-header {
     border-bottom: 1px solid hsla(356, 29%, 20%, 0.241);
-   
+    width: 113rem;
+    margin: 0 auto;
 }
 /* CATEGORIES */
+main {
+    height: 100vh;
+    margin-top: 10rem;
+}
 .main-categories{
     text-align: center;
     color:hsla(356, 29%, 20%, 0.783) ;
@@ -34,6 +46,7 @@ header img {
     justify-content: center;
     align-items: center;
     gap: 5rem;
+    flex-wrap: wrap;
 }
 .list-categories .txt-categories{
     color: hsla(356, 29%, 20%, 0.783);
@@ -53,7 +66,23 @@ header img {
     border: 1px solid hsla(356, 29%, 20%, 0.796);
     padding: 0.5rem;
     border-radius: 0.5rem;
-    background-color: hsla(356, 29%, 20%, 0.509) ;
+    background-color: hsla(1, 42%, 75%, 0.612) ;
     color: white;
     transition-duration: 0.8s;
 }
+
+/* FOOTER */
+footer{
+    background-color: white;
+    border-radius: 0 20rem 0 0;
+    height: 30vh;
+}
+.main-footer{
+    padding: 0 10rem 0 10rem;  
+}
+.main-footer img{
+    padding: 1rem;
+}
+ #logo-ansize{
+    width: 80px;
+ }
