--- a/colares/colares-pagina.css
+++ b/colares/colares-pagina.css
@@ -166,7 +166,7 @@ body{
        
       
       }
-
+     
 
 /* MAIN */
 main {
@@ -208,6 +208,28 @@ main {
     background: var(--background-categories);
     border-radius: 0 0 0.5rem 0.5rem;
     line-height: 1.2rem;
+}
+#btn-home{
+    border: none; 
+    font-size: 1.0rem;
+    margin: 2rem 0 0 4rem;
+}
+
+#btn-home a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+}
+#btn-home p{
+    background-color: var(--background-categories);
+    padding: 1rem;
+    color: var(--texto);
+}
+#btn-home svg{
+    background-color: white;
+    padding: 1rem 0.5rem 1rem 0.5rem;
+    color: var(--texto);
 }
 
 @media (max-width:350px){
